update menambah plugun com.google.gson dan fix build maven fix mainClass conf